# api/swagger.js
@@ -14,11 +14,11 @@ const doc = {
     title: "API for SHOP Website",
     description:
       "This is a REST API application made by ZDiDane for SHOP Website. \n\nIf you want to use this API, please get csrfToken first, then add csrfToken to header of request. \n\nIf you want to use API for Admin, please add bearAuth to header of request.",
-      "contact": {
-        "name": "ZDiDane",
-        "email": "didannguyen17@gmail.com",
-        "url": "https://didan.id.vn",
-      },
+    contact: {
+      name: "ZDiDane",
+      email: "didannguyen17@gmail.com",
+      url: "https://didan.id.vn",
+    },
   },
   servers: [
     {
@@ -63,11 +63,11 @@ const doc = {
       bearAuth: {
         type: "http",
         scheme: "bearer",
-      }
+      },
     }, // Thêm các securitySchemes để có quyền truy cập vào các API
     schemas: {
       SignUp: {
-        $name: "anv",
+        $username: "anv",
         $email: "anv@gmail.com",
         $password: "123456",
         $re_password: "123456",
@@ -83,6 +83,7 @@ const doc = {
         $name: "Iphone 12",
         $price: 1000,
         $url: "file.jpg",
+        $quantity: 10,
         $description: "A smartphone from Apple",
       },
     },
@@ -92,7 +93,7 @@ const options = {
   multipart: true,
 };
 
-SwaggerAutogen(outputFile, endpointsFiles, doc, options)
+SwaggerAutogen(outputFile, endpointsFiles, doc, options);
 // .then(() => {
 //   require("../server.js"); // Đặt file chạy server ở đây (chạy sswagger.js trước rồi mới chạy server.js) => thay cả trong package.json
 // }); // Tạo file swagger_output.json từ file orders.js
